# Galaxy

./: .env.backup  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  CONTRIBUTING.md  MIGRATION_STATUS.md  Makefile  PHASE3_RESULTS.md  README.md  analyze_penalty_results.py  baselines.py  big_picture.md  claude_improvement_plan.md  code_validator.py  codex_improvement_plan.md  config.py  config.yaml  evolution_analysis.md  gemini_client.py  initial_conditions.py  plan_20251024.md  plan_20251029.md  prompts.py  prototype.py  pyproject.toml  regenerate_viz.py  smoke_test_3d.py  test_analysis.md  test_gemini_connection.py  validation_metrics.py  visualization.py
.github/workflows/: ci.yml  claude-code-review.yml
benchmarks/: README.md  __init__.py  benchmark_runner.py  scaling_analysis.py  visualization.py
experiments/crossover_analysis_20251031/: README.md  analyze_results.py
experiments/crossover_analysis_20251031/control_disabled/: evolution_history.json
experiments/crossover_analysis_20251031/crossover_30pct/: evolution_history.json
experiments/crossover_analysis_20251031/crossover_50pct/: evolution_history.json
galaxy_prometheus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: __init__.py  compare_problems.py  compare_to_baselines.py  cross_validate_problems.py  extract_best_model.py  run_benchmarks.py
tests/: __init__.py  conftest.py  test_baselines.py  test_benchmark_integration.py  test_benchmark_runner.py  test_code_length_penalty.py  test_compare_to_baselines.py  test_config.py  test_cross_validate_problems.py  test_crossover.py  test_crossover_integration.py  test_evolution.py  test_extract_best_model.py  test_get_initial_particles.py  test_history_tracking.py  test_initial_conditions.py  test_integration.py  test_multi_problem_config.py  test_nbody_physics.py  test_scaling_analysis.py  test_surrogate_interface.py  test_validation_metrics.py  test_visualization.py  test_visualization_integration.py
